--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\vip2021\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
-j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.1
-j2ee.server.instance=tomcat101:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.1
+deploy.ant.properties.file=/home/anhducokok/snap/netbeans/127/tomcat101.properties
+j2ee.server.home=/home/anhducokok/Downloads/apache-tomcat-10.1.39
+j2ee.server.instance=tomcat101:home=/home/anhducokok/Downloads/apache-tomcat-10.1.39
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
-user.properties.file=C:\\Users\\vip2021\\AppData\\Roaming\\NetBeans\\17\\build.properties
+user.properties.file=/home/anhducokok/snap/netbeans/127/build.properties
