--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,11 @@
-deploy.ant.properties.file=/home/anhducokok/snap/netbeans/127/tomcat101.properties
-j2ee.server.home=/home/anhducokok/Downloads/apache-tomcat-10.1.39
-j2ee.server.instance=tomcat101:home=/home/anhducokok/Downloads/apache-tomcat-10.1.39
+deploy.ant.properties.file=C:\\Users\\ADMIN\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=C:\\Users\\ADMIN\\Downloads\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=C:\\Users\\ADMIN\\Downloads\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.jaxb-api-2.1.jar=C:\\Users\\ADMIN\\Downloads\\Compressed\\jaxb-api-2.1.jar
+file.reference.sqljdbc4-3.0.jar=C:\\Users\\ADMIN\\Downloads\\Compressed\\sqljdbc4-3.0.jar
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.1
+j2ee.server.instance=tomcat101:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.1
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
-user.properties.file=/home/anhducokok/snap/netbeans/127/build.properties
+user.properties.file=C:\\Users\\ADMIN\\AppData\\Roaming\\NetBeans\\17\\build.properties
